zhaoge/force-app/main/default/objects/Log__c/Log__c.object-meta.xml
<CustomObject>
    <label>連けい・エラーログ</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>連けい・エラーログ名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>