zhaoge/force-app/main/default/objects/Log__c/fields/ErrorContents__c.field-meta.xml
<CustomField>
    <fullName>ErrorContents__c</fullName>
    <label>エラー内容</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>