zhaoge/force-app/main/default/objects/Log__c/fields/IFCalledDateTime__c.field-meta.xml
<CustomField>
    <fullName>IFCalledDateTime__c</fullName>
    <label>IF呼び出し日時</label>
    <type>DateTime</type>
</CustomField>