zhaoge/force-app/main/default/objects/Log__c/fields/IFName__c.field-meta.xml
<CustomField>
    <fullName>IFName__c</fullName>
    <label>IF名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>