zhaoge/force-app/main/default/objects/Log__c/fields/IFType__c.field-meta.xml
<CustomField>
    <fullName>IFType__c</fullName>
    <label>IF種別</label>
    <length>255</length>
    <type>Text</type>
</CustomField>