zhaoge/force-app/main/default/objects/Log__c/fields/ProcessResult__c.field-meta.xml
<CustomField>
    <fullName>ProcessResult__c</fullName>
    <label>処理結果</label>
    <length>255</length>
    <type>Text</type>
</CustomField>