zhaoge/force-app/main/default/objects/Log__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>レスポンス</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>